<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/general_preferences_title">

		<CheckBoxPreference
			android:key="show_notifications"
			android:title="@string/show_notification"
			android:summary="@string/show_notification_detailed"
			android:defaultValue="true" />

		<ListPreference
			android:key="trim_frequency"
			android:title="@string/title_trim_frequency"
			android:summary="@string/summary_trim_frequency"
			android:entries="@array/entries_trim_frequency"
			android:entryValues="@array/entryvalues_trim_frequency"
			android:dialogTitle="@string/dialog_title_trim_frequency"
			android:defaultValue="0"
		/>

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_title">

		<CheckBoxPreference
			android:key="limit_by_count"
			android:title="@string/title_limit_by_count"
			android:summary="@string/summary_limit_by_count"
			android:defaultValue="true" />

		<ListPreference
			android:key="maximum_count"
			android:title="@string/title_count_settings"
			android:summary="@string/summary_count_settings"
			android:entries="@array/entries_count_settings"
			android:entryValues="@array/entryvalues_count_settings"
			android:dialogTitle="@string/dialog_title_count_settings"
			android:dependency="limit_by_count"
			android:defaultValue="50" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/colapse_by_contacts_preferences_title">

		<CheckBoxPreference
			android:key="colapse_by_contacts"
			android:title="@string/title_colapse_by_contacts"
			android:summary="@string/summary_colapse_by_contacts"
			android:defaultValue="false"  />

		<ListPreference
			android:key="maxium_per_contact"
			android:title="@string/title_maxium_per_contact_settings"
			android:summary="@string/summary_maxium_per_contact_settings"
			android:entries="@array/entries_maxium_per_contact_settings"
			android:entryValues="@array/entryvalues_maxium_per_contact_settings"
			android:dialogTitle="@string/dialog_title_count_settings"
			android:dependency="colapse_by_contacts"
			android:defaultValue="5" />

	</PreferenceCategory>

</PreferenceScreen>
